# config/swagger.yaml
@@ -231,7 +231,7 @@ paths:
                     description: server error
     /cart/add-product:
         post:
-            description: збереження замовлення. Якщо це перший продукт у кошику - відправка запиту має проводитися без вказання id. У такому випадку сервер розцінює запит як нове замовлення і створює нову сутність. Якщо користувач додає нові продукти у замовлення, потрібно відправляти повторно увесь масив даних по продуктам і раніше отримане у відповіді сервера значення id. Це призведе до операції оновлення запису. Еквівалентом оформлення замовлення, є відправка статусу orderStatus = ordered. Загалом можливі так статуси замовлення - 'started', 'ordered', 'processed', 'changed', 'finished', 'declined'
+            description: збереження замовлення. Якщо це перший продукт у кошику - відправка запиту має проводитися без вказання id. У такому випадку сервер розцінює запит як нове замовлення і створює нову сутність. Якщо користувач додає нові продукти у замовлення, потрібно відправляти повторно увесь масив даних по продуктам і раніше отримане у відповіді сервера значення id. Це призведе до операції оновлення запису. Еквівалентом оформлення замовлення, є відправка статусу orderStatus = ordered. Загалом можливі так статуси замовлення - 'started', 'ordered', 'processed', 'changed', 'finished', 'declined', 'sent'
             tags:
                 - shoppingCart
             requestBody:
@@ -298,7 +298,22 @@ paths:
                     description: неможливо обробити
                 '500':
                     description: помилка сервера
+    /order-processing/{id}/{status}:
+        patch:
+            description: оновлення статусів замовлення (процессінг)
+            tags:
+                - orderProcessing
+            parameters:
+                - in: path
+                  name: id
+                - in : path
+                  name: status
 
+            responses:
+                '201':
+                    description: created/updated
+                '500':
+                    description: помилка сервера
 components:
     schemas:
         Product:
